force-app/main/default/objects/Pre_Surgical_Patient_Segmentation__c/Pre_Surgical_Patient_Segmentation__c.object-meta.xml
<CustomObject>
    <label>Pre-Surgical Patient Segmentation</label>
    <nameField>
        <displayFormat>PSPS-{000000}</displayFormat>
        <label>Pre-Surgical Patient Segmentation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Surgical Patient Segmentation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>