force-app/main/default/objects/Pre_Surgical_Patient_Segmentation__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <inlineHelpText>Please select one</inlineHelpText>
    <label>Age</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30-44</fullName>
            </value>
            <value>
                <fullName>45-55</fullName>
            </value>
            <value>
                <fullName>56-70</fullName>
            </value>
            <value>
                <fullName>71 and older</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>