force-app/main/default/objects/Pre_Surgical_Patient_Segmentation__c/fields/Consumer__c.field-meta.xml
<CustomField>
    <fullName>Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pre-Surgical Patient Segmentation</relationshipLabel>
    <relationshipName>Pre_Surgical_Patient_Segmentation</relationshipName>
    <type>Lookup</type>
</CustomField>