force-app/main/default/objects/Pre_Surgical_Patient_Segmentation__c/fields/Question_No_16__c.field-meta.xml
<CustomField>
    <fullName>Question_No_16__c</fullName>
    <inlineHelpText>I self diagnose and treat my joint pain on my own.</inlineHelpText>
    <label>Question No.16</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>