force-app/main/default/objects/Pre_Surgical_Patient_Segmentation__c/fields/Question_No_18__c.field-meta.xml
<CustomField>
    <fullName>Question_No_18__c</fullName>
    <inlineHelpText>My doctor is easy to talk to, listens to my concerns and I trust his/her decisions about my health.</inlineHelpText>
    <label>Question No.18</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>