force-app/main/default/objects/Pre_Surgical_Patient_Segmentation__c/fields/Question_No_19__c.field-meta.xml
<CustomField>
    <fullName>Question_No_19__c</fullName>
    <inlineHelpText>My knee or hip makes it hard to walk, even short distances.</inlineHelpText>
    <label>Question No. 19</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>