force-app/main/default/objects/Pre_Surgical_Patient_Segmentation__c/recordTypes/Consumer.recordType-meta.xml
<RecordType>
    <fullName>Consumer</fullName>
    <active>true</active>
    <description>This is the record type to capture Consumer related Pre-Surgical Patient Segmentation</description>
    <label>Consumer</label>
</RecordType>